--- a/wp-content/themes/onepress/assets/sass/project-flow.scss
+++ b/wp-content/themes/onepress/assets/sass/project-flow.scss
@@ -13,6 +13,7 @@ and open the template in the editor.
 .flow{
 	margin-top:20px;
 	@media screen and (min-width: 500px) {
+		//PC
 		ul{
 			display:flex;
 			flex-wrap: wrap;
@@ -55,6 +56,7 @@ and open the template in the editor.
 		}
 	}
 	@media screen and (max-width: 500px) {
+		//SP
 		ul{
 			display:flex;
 			flex-direction: column;
@@ -100,11 +102,42 @@ and open the template in the editor.
 			}
 		}
 	}
-	
+
 }
 
 .disp-none{
 	display: none;
+}
+
+#colorbox{
+	.pop-up{
+		margin: 10px;
+		@media screen and (min-width: 500px) {
+			//PC
+			&.flex{
+				display:flex;
+				flex-wrap:wrap;
+			}
+			.flexbox{
+				width: 50%;
+			}
+		}
+		@media screen and (max-width: 500px) {
+			//SP
+			&.flex{
+				display:flex;
+				flex-direction: column;
+				.flexbox{
+					margin-bottom: 10px;
+				}	
+			}
+		}
+		.popup-title{
+			font-size:150%;
+			text-align: center;
+			margin-bottom: 5px;
+		}
+	}
 }
 
 
