--- a/wp-content/themes/onepress/assets/css/project-flow.css
+++ b/wp-content/themes/onepress/assets/css/project-flow.css
@@ -49,6 +49,9 @@ and open the template in the editor.
   .flow ul li .cercle .text {
     margin: auto;
   }
+  .flow ul li .cercle a {
+    text-decoration: underline;
+  }
   .flow ul .border {
     width: 50px;
     border: 2px solid;
@@ -99,6 +102,9 @@ and open the template in the editor.
   .flow ul li .cercle .text {
     margin: auto;
   }
+  .flow ul li .cercle a {
+    text-decoration: underline;
+  }
   .flow ul .border {
     width: 50px;
     border: 2px solid;
@@ -131,6 +137,11 @@ and open the template in the editor.
   #colorbox .pop-up.flex .flexbox {
     margin-bottom: 10px;
   }
+}
+
+#colorbox .pop-up img {
+  display: block;
+  margin: 0 auto 15px auto;
 }
 
 #colorbox .pop-up .popup-title {
