--- a/wp-content/themes/onepress/assets/sass/project-flow.scss
+++ b/wp-content/themes/onepress/assets/sass/project-flow.scss
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 2018/10/17, 4:30:30
     Author     : Toshiki
 */
@@ -124,6 +124,9 @@ and open the template in the editor.
 				display:flex;
 				flex-wrap:wrap;
 			}
+			.image-box{
+				width: 100%;
+			}
 			.flexbox{
 				width: 50%;
 			}
@@ -135,7 +138,7 @@ and open the template in the editor.
 				flex-direction: column;
 				.flexbox{
 					margin-bottom: 10px;
-				}	
+				}
 			}
 		}
 		img{
