--- a/wp-content/themes/onepress/assets/css/style.css
+++ b/wp-content/themes/onepress/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Theme Name: OnePress
 Theme URI: https://www.famethemes.com/themes/onepress/
@@ -78,7 +79,7 @@ body {
 }
 
 body, button, input, select, textarea {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-size: 0.875rem;
   line-height: 1.7;
@@ -742,7 +743,24 @@ Footer widgets
 }
 
 .footer-widgets .sidebar .widget {
-  margin-bottom: 30px;
+  margin-bottom: 0px;
+}
+
+@media screen and (min-width: 500px) {
+  .footer-widgets #footer-1 {
+    display: none;
+  }
+  .footer-widgets #footer-2 {
+    margin: auto;
+    width: 100%;
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer-widgets #footer-2 {
+    display: none;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -1577,7 +1595,7 @@ Footer widgets
   font-weight: 500;
   text-transform: none;
   letter-spacing: -0.6px;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 25px;
   line-height: 1.3;
 }
@@ -2362,6 +2380,7 @@ section > .customize-partial-edit-shortcut button {
   -webkit-transition-delay: 0.7s;
   /* Safari */
   transition-delay: 0.7s;
+  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体","Open Sans", Helvetica, Arial, sans-serif;
 }
 
 .hero-slideshow-wrapper .hero__content .hero-small-text {
@@ -3535,6 +3554,22 @@ div.wpcf7-response-output {
 
 .gallery-masonry .inner {
   display: block;
+}
+
+.gallery-content {
+  text-align: center;
+}
+
+@media screen and (min-width: 500px) {
+  .gallery-content .sp-logo {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .gallery-content .pc-logo {
+    display: none;
+  }
 }
 
 /*--------------------------------------------------------------
