--- a/wp-content/themes/onepress/assets/sass/_variables.scss
+++ b/wp-content/themes/onepress/assets/sass/_variables.scss
@@ -18,7 +18,7 @@ $border:		#e9e9e9;
 $meta:			#f8f9f9;
 
 // Fonts
-$font_text:      	 "Open Sans", Helvetica, Arial, sans-serif;
+$font_text:      	 "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体","Open Sans", Helvetica, Arial, sans-serif;
 $font_heading:       "Raleway",Helvetica,Arial,sans-serif;
 $monaco: 			 Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 
