--- a/wp-content/themes/onepress/assets/css/style.css
+++ b/wp-content/themes/onepress/assets/css/style.css
@@ -2217,8 +2217,8 @@ section > .customize-partial-edit-shortcut button {
 /* Section Stuffs
 ------------------------------*/
 .section-padding {
-  padding: 70px 0px;
-  padding:  4.375rem 0px;
+  padding: 30px 0px;
+  padding:  1.875rem 0px;
 }
 
 .section-padding-lg {
@@ -2784,8 +2784,8 @@ section > .customize-partial-edit-shortcut button {
   margin-bottom: 30px;
 }
 
-.section-about .row > div {
-  margin-top: 30px;
+.section-about .image {
+  text-align: center;
 }
 
 /* Section: Services
