--- a/wp-content/themes/onepress/assets/sass/_sections.scss
+++ b/wp-content/themes/onepress/assets/sass/_sections.scss
@@ -2,7 +2,7 @@
 /* Section Stuffs
 ------------------------------*/
 .section-padding {
-    @include rem('padding', 70px 0px);
+    @include rem('padding', 30px 0px);
 }
 
 .section-padding-lg {
@@ -537,10 +537,8 @@
     .section-title-area {
         margin-bottom: 30px;
     }
-    .row {
-        > div {
-            margin-top: 30px;
-        }
+    .image {
+		text-align:center;
     }
 }
 
