QRコード追加

--- a/wp-content/themes/onepress/assets/css/style.css
+++ b/wp-content/themes/onepress/assets/css/style.css
@@ -763,6 +763,10 @@ Footer widgets
   }
 }
 
+.footer-widgets .qr_code {
+  text-align: center;
+}
+
 /*--------------------------------------------------------------
 4.0 Structure
 --------------------------------------------------------------*/
