--- a/wp-content/themes/onepress/assets/css/contact.css
+++ b/wp-content/themes/onepress/assets/css/contact.css
@@ -1,67 +1,1 @@
-@charset "UTF-8";
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : 2018/09/08, 16:27:50
-    Author     : Toshiki
-*/
-@media screen and (min-width: 500px) {
-  #content-inside {
-    width: 65%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  #content-inside {
-    width: 80%;
-  }
-}
-
-.form-table {
-  width: 100%;
-  font-size: 15px;
-}
-
-.form-table tr:nth-child(even) {
-  background-color: #e6e5e5;
-  /* 偶数行をうっすらグレーに */
-}
-
-.form-table tr td {
-  text-align: center;
-}
-
-.form-table tr .requied {
-  color: red;
-  font-weight: normal;
-}
-
-.form-table tr input[type="submit"] {
-  width: 80%;
-}
-
-@media screen and (min-width: 500px) {
-  .form-table tr th {
-    padding: 10px;
-    width: 195px;
-  }
-  .form-table tr td {
-    padding: 10px;
-  }
-  .form-table tr input, .form-table tr textarea {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .form-table tr th, .form-table tr td {
-    display: block;
-    padding: 5px 10px;
-  }
-  .form-table tr th input, .form-table tr th textarea, .form-table tr td input, .form-table tr td textarea {
-    width: 100%;
-  }
-}
+@media screen and (min-width: 500px){#content-inside{width:65%}}@media screen and (max-width: 500px){#content-inside{width:80%}}.form-table{width:100%;font-size:15px}.form-table tr:nth-child(even){background-color:#e6e5e5}.form-table tr td{text-align:center}.form-table tr .requied{color:red;font-weight:normal}.form-table tr input[type="submit"]{width:80%}@media screen and (min-width: 500px){.form-table tr th{padding:10px;width:195px}.form-table tr td{padding:10px}.form-table tr input,.form-table tr textarea{width:100%}}@media screen and (max-width: 500px){.form-table tr th,.form-table tr td{display:block;padding:5px 10px}.form-table tr th input,.form-table tr th textarea,.form-table tr td input,.form-table tr td textarea{width:100%}}
