--- a/wp-content/themes/onepress/assets/css/message.css
+++ b/wp-content/themes/onepress/assets/css/message.css
@@ -1,29 +1,1 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : 2018/09/09, 7:23:39
-    Author     : Toshiki
-*/
-@media screen and (max-width: 500px) {
-  .pc-message-text {
-    display: none;
-  }
-}
-
-.wp-block-cover-text {
-  width: 60%;
-  font-size: 2vw;
-}
-
-.sp-message-text, .sp-message-image {
-  font-size: 4vw;
-}
-
-@media screen and (min-width: 500px) {
-  .sp-message-text, .sp-message-image {
-    display: none;
-  }
-}
+@media screen and (max-width: 500px){.pc-message-text{display:none}}.wp-block-cover-text{width:60%;font-size:2vw}.sp-message-text,.sp-message-image{font-size:4vw}@media screen and (min-width: 500px){.sp-message-text,.sp-message-image{display:none}}
