--- a/wp-content/themes/onepress/assets/css/project-flow.css
+++ b/wp-content/themes/onepress/assets/css/project-flow.css
@@ -1,158 +1,1 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : 2018/10/17, 4:30:30
-    Author     : Toshiki
-*/
-.top {
-  text-align: center;
-}
-
-.flow {
-  margin-top: 20px;
-}
-
-@media screen and (min-width: 500px) {
-  .flow ul {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-left: 0;
-  }
-  .flow ul li {
-    list-style: none;
-    text-align: center;
-    margin: 10px auto;
-    width: 15%;
-  }
-  .flow ul li.no-image {
-    margin-top: 13%;
-  }
-  .flow ul li img {
-    padding-bottom: 10px;
-  }
-  .flow ul li img.arrow {
-    margin-top: 82%;
-    width: 50%;
-  }
-  .flow ul li .arrow-down {
-    width: 20%;
-    padding-bottom: 20px;
-  }
-  .flow ul li .cercle {
-    width: 110px;
-    height: 110px;
-    border: 1px solid;
-    border-radius: 50%;
-    padding-top: 20px;
-    margin: auto;
-  }
-  .flow ul li .cercle .text {
-    margin: auto;
-  }
-  .flow ul li .cercle a {
-    text-decoration: underline;
-  }
-  .flow ul .border {
-    width: 50px;
-    border: 2px solid;
-  }
-  .flow .flex-right {
-    flex-direction: row-reverse;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .flow ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 0px;
-    margin-bottom: 0px;
-  }
-  .flow ul li {
-    list-style: none;
-    text-align: center;
-    margin: 10px auto;
-    width: 80%;
-  }
-  .flow ul li img {
-    width: 80%;
-    padding: 10px 0px;
-  }
-  .flow ul li img.arrow {
-    width: 20%;
-  }
-  .flow ul li img.turn-right {
-    transform: rotate(90deg);
-  }
-  .flow ul li img.turn-left {
-    transform: rotate(-90deg);
-  }
-  .flow ul li .arrow-down {
-    width: 9%;
-  }
-  .flow ul li .cercle {
-    width: 110px;
-    height: 110px;
-    border: 1px solid;
-    border-radius: 50%;
-    padding-top: 20px;
-    margin: auto;
-  }
-  .flow ul li .cercle .text {
-    margin: auto;
-  }
-  .flow ul li .cercle a {
-    text-decoration: underline;
-  }
-  .flow ul .border {
-    width: 50px;
-    border: 2px solid;
-  }
-}
-
-.disp-none {
-  display: none;
-}
-
-#colorbox .pop-up {
-  margin: 10px;
-}
-
-@media screen and (min-width: 500px) {
-  #colorbox .pop-up.flex {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  #colorbox .pop-up .image-box {
-    width: 100%;
-  }
-  #colorbox .pop-up .flexbox {
-    width: 50%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  #colorbox .pop-up.flex {
-    display: flex;
-    flex-direction: column;
-  }
-  #colorbox .pop-up.flex .flexbox {
-    margin-bottom: 10px;
-  }
-}
-
-#colorbox .pop-up img {
-  display: block;
-  margin: 0 auto 15px auto;
-}
-
-#colorbox .pop-up .popup-title {
-  font-size: 150%;
-  text-align: center;
-  margin-bottom: 5px;
-}
+.top{text-align:center}.flow{margin-top:20px}@media screen and (min-width: 500px){.flow ul{display:flex;flex-wrap:wrap;align-items:center;padding-left:0}.flow ul li{list-style:none;text-align:center;margin:10px auto;width:15%}.flow ul li.no-image{margin-top:13%}.flow ul li img{padding-bottom:10px}.flow ul li img.arrow{margin-top:82%;width:50%}.flow ul li .arrow-down{width:20%;padding-bottom:20px}.flow ul li .cercle{width:110px;height:110px;border:1px solid;border-radius:50%;padding-top:20px;margin:auto}.flow ul li .cercle .text{margin:auto}.flow ul li .cercle a{text-decoration:underline}.flow ul .border{width:50px;border:2px solid}.flow .flex-right{flex-direction:row-reverse}}@media screen and (max-width: 500px){.flow ul{display:flex;flex-direction:column;align-items:center;padding-left:0px;margin-bottom:0px}.flow ul li{list-style:none;text-align:center;margin:10px auto;width:80%}.flow ul li img{width:80%;padding:10px 0px}.flow ul li img.arrow{width:20%}.flow ul li img.turn-right{transform:rotate(90deg)}.flow ul li img.turn-left{transform:rotate(-90deg)}.flow ul li .arrow-down{width:9%}.flow ul li .cercle{width:110px;height:110px;border:1px solid;border-radius:50%;padding-top:20px;margin:auto}.flow ul li .cercle .text{margin:auto}.flow ul li .cercle a{text-decoration:underline}.flow ul .border{width:50px;border:2px solid}}.disp-none{display:none}#colorbox .pop-up{margin:10px}@media screen and (min-width: 500px){#colorbox .pop-up.flex{display:flex;flex-wrap:wrap}#colorbox .pop-up .image-box{width:100%}#colorbox .pop-up .flexbox{width:50%}}@media screen and (max-width: 500px){#colorbox .pop-up.flex{display:flex;flex-direction:column}#colorbox .pop-up.flex .flexbox{margin-bottom:10px}}#colorbox .pop-up img{display:block;margin:0 auto 15px auto}#colorbox .pop-up .popup-title{font-size:150%;text-align:center;margin-bottom:5px}
