--- a/wp-content/themes/onepress/assets/css/data.css
+++ b/wp-content/themes/onepress/assets/css/data.css
@@ -1,17 +1,1 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 2018/09/08, 16:27:50
-    Author     : Toshiki
-*/
-.company-table {
-  width: 100%;
-}
-
-.company-table th {
-  width: 30%;
-  font-weight: bold;
-}
+.company-table{width:100%}.company-table th{width:30%;font-weight:bold}
