--- a/wp-content/themes/onepress/assets/css/item.css
+++ b/wp-content/themes/onepress/assets/css/item.css
@@ -1,1 +1,1 @@
-.bx-wrapper{margin:auto}
+.flexbox{display:flex}.flexbox .entry-header{margin-right:20px}.flexbox .entry-content{margin-bottom:0px}.bx-wrapper{margin:auto}.simulation .align-right{text-align:right}.simulation .minus{color:red}
