--- a/wp-content/themes/onepress/assets/css/item.css
+++ b/wp-content/themes/onepress/assets/css/item.css
@@ -1,1 +1,1 @@
-.flexbox{display:flex}.flexbox .entry-header{margin-right:20px}.flexbox .entry-content{margin-bottom:0px}.bx-wrapper{margin:auto}.simulation .align-right{text-align:right}.simulation .minus{color:red}
+.entry-header{margin-bottom:20px}h2{font-size:1.5rem}.flexbox{font-size:1.1rem;margin-top:20px;display:flex}.flexbox .entry-subtitle{margin-right:20px}.flexbox .entry-content{margin-bottom:0px}.bx-wrapper{margin:auto}.simulation .align-right{text-align:right}.simulation .minus{color:red}
